--- a/index.html
+++ b/index.html
@@ -133,6 +133,73 @@
         </div>
     </section>
 
+    <section class="subscribe">
+        <div class="container">
+            <div class="page-section page-section--medium text-center">
+                <div class="row">
+                    <div class="col-md-4">
+                        <p class="subscribe__paragraph">Subscribe To Our Newsletter</p>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="row">
+                            <div class="col-md-7">
+                                <form action="">
+                                    <div class="form-group">
+                                        <input type="email" class="form-control" placeholder="Email">
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="col-md-5 pull">
+                                <button class="button__subscribe">SUBSCRIBE</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer footer--bg">
+        <div class="container">
+            <div class="page-section page-section--small">
+                <div class="row gutters-100">
+                    <div class="col-md-6 col-lg-2">
+                        <h3 class="footer__title">Company</h3>
+                        <ul>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Careers</a></li>
+                            <li><a href="#">Primacy &amp; Policy</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 col-lg-2">
+                        <h3 class="footer__title">Services</h3>
+                        <ul>
+                            <li><a href="#">E-Marketing</a></li>
+                            <li><a href="#">Web Development</a></li>
+                            <li><a href="#">Business IT solution</a></li>
+                            <li><a href="#">SEO Service</a></li>
+                            <li><a href="#">BPO Service</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 col-lg-5">
+                        <div id="map" style="height: 230px;"></div>
+                       
+                    </div>
+                    <div class="col-md-6 col-lg-3">
+                        <h3 class="footer__title">Contact</h3>
+                        <ul>
+                            <li><span class="glyphicon glyphicon-map-marker"></span><a href="#"> Street and bla bla name make 2 lines and all</a></li>
+                            <li><span class="glyphicon glyphicon-earphone"></span><a href="#"> +00 01xx-xxxxxxx</a></li>
+                            <li><span class="glyphicon glyphicon-envelope"></span><a href="#"> support@dartthemes.com</a> </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
